Fix the right gap in thumbnail

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ body {
   max-width: 100%;
 }
 
-
 .item .thumbnail {
   padding: 0;
   max-width: 345px;
@@ -31,9 +30,10 @@ body {
 
 .item img {
   margin-left:-1px;
+
   margin-top:-1px;
   border-radius:4px 4px 0 0;
-  max-width: 345px;
+  max-width: 100.5%;
 }
 
 @media (max-width: 768px) {
